2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add article "Writing a Widget Using
	Cairo and PyGTK 2.8" by Lawrence Oluyede (patch by
	Gian Mario Tagliaretti)

2005-11-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add temporarily offline notice

2005-11-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyGG

2005-11-16  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Pygmy

2005-11-11  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyConsole widget

2005-10-25  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Soundconverter

2005-10-24  Thomas Wood  <thos@gnome.org>

	* img/gnome-64.png: Updated to new version

2005-10-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyNeighborhood

2005-10-17  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Pybliographer

2005-10-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PySudoku

2005-10-04  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.8.2

2005-10-04  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.8.1

2005-09-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * articles.src: Fix missing end-quotes
	* newsitems.py: Added new article notice by Nzeka Gilbert
	* applications.src: Added Scribes

2005-09-17  John Finlay  <finlay@moeraki.com>

	* newsitems.py
	* reference.src: Add info about ref 2.8.1

2005-09-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Added QA-Assistant

2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
                            Comix, Pida, PyBridge.
	* articles.src: Added bitpodder article (by Netza Gilbert)

2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
