@@ -1,5 +1,10 @@
 2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* newsitems.py: news entry for the article "Writing
+	a Widget Using Cairo and PyGTK 2.8" by Lawrence Oluyede
+
+2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* articles.src: Add article "Writing a Widget Using
 	Cairo and PyGTK 2.8" by Lawrence Oluyede (patch by
 	Gian Mario Tagliaretti)
